--- a/index.html
+++ b/index.html
@@ -171,8 +171,10 @@
 <img src="Img/21.png" name="With Light Mode" />
 <!---Quick Links---></p>
 <h2><b>🖇️ Quick Links</b></h2>
+<h4><b>Text Editor Download:</b></h4>
 <h4><b><a href="https://play.google.com/store/apps/details?id=com.maxistar.textpad" alt="For Android">Text Editor for Android</a></b></h4>
 <h4><b><a href="https://apps.apple.com/us/app/text-editor/id1483790257" alt="For iOS">Text Editor for iOS</a></b></h4>
+<h4><b>VLC Media Player Download:</b></h4>
 <h4><b><a href="https://play.google.com/store/apps/details?id=org.videolan.vlc">VLC For Android</a></b></h4>
 <h4><b><a href="https://www.videolan.org/vlc/download-macosx.html">VLC For iOS</a></b></h4>
 <h4><b><a href="https://www.videolan.org/vlc/download-windows.html" alt="For Windows">VLC For Windows</a></b></h4>
@@ -181,7 +183,7 @@
 <h2><b>⛑Contact Us!</b></h2>
 <h4><b>Join our Update Channel at Telegram:<a href="https://telegram.me/TheCaduceusUPDATE"> Join Now!</a></b></h4>
 <h4><b>Directly Contact the Developer using Telegram <a href="https://telegram.me/HelpAutomatted_Bot">@HelpAutomatted_Bot</a></b></h4>
-<h2><b>❤️Credits &amp; Thanks</b></h2>
+<h2><b>❤️Credits & Thanks</b></h2>
 <p><b><a href="https://github.com/TheCaduceus">Dr.Caduceus</a>: For creating this Powerful Project and this All-in-one Guide.</b></p>
 <p><b><a href="https://hub.docker.com/u/developeranaz">DevAnaZ</a>: For Project on Docker Hub.</b></p>
 
