--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@
 <h4><b>2.Now if you don't have a Heroku account then create once or just login!</b></h4>
 <h4><b>3.After opening the Deployment page, Enter the following Values</b></h4>
 <!---Heroku Values--->
-<p><b>
+<h4><b>
 	1.App name - Give a Nice name to your Index.<br />
 	2.CONFIG_IN_URL - Paste the URL which you copied from STEP 5 written in above section.<br />
         3.indexauthentication - If you want to add password protection to prevent unauthorized access then change the value to "true" and change the below two values otherwise keep it "false" and ignore the following two values<br />
         4.INDEXpassword - If you set authentication to "true" then change its value! This value will be your Index Password<br />
         5.INDEXusername - If you set the password then change this value! This value will be your Index Username to login<br />
         6.template - You can turn Dark mode on and off! Just type "light" to turn it off and "dark" to turn it on.
-</b></p>
+</b></h4>
 <p><img src="Img/4.png" alt="4" /></p>
 <h4><b>4.Now click on the Deploy button and wait patiently and once it got successful deployed, click View App button</b></h4>
 <p><img src="Img/5.png" alt="5" /></p>
@@ -115,17 +115,17 @@
 <h4><b>4.Choose "Deploy from Repo" to deploy your forked repository.</b></h4>
 <p><img src="Img/9.png" alt="9" /></p>
 <h4><b>5.Then select "Multi-Cloud-Index" Repository from the list.</b></h4>
-<p><img src="Img/10.png" alt="10" /></p>
+<h4><img src="Img/10.png" alt="10" /></p>
 <h4><b>6.Click "Add Variables" and enter the following Values to configure your Index.</b></h4>
 <!---Railway App Values--->
 <!---There is no need for App Name as a Value in Railway App--->
-<p><b>
+<h4><b>
 	1.CONFIG_IN_URL - Paste the URL which you copied from STEP 5 written in above section.<br />
         2.indexauthentication - If you want to add password protection to prevent unauthorized access then change the value to "true" and change the below two values otherwise keep it "false" and ignore the following two values<br />
         3.INDEXpassword - If you set authentication to "true" then change its value! This value will be your Index Password<br />
         4.INDEXusername - If you set the password then change this value! This value will be your Index Username to login<br />
         5.template - You can turn Dark mode on and off! Just type "light" to turn it off and "dark" to turn it on.
-</b></p>
+</b></h4>
 <h4><b>7.Finally! Click on the "Deploy" button and let it get deployed! Index can take maximum 10 Minutes to start working after successfully getting deployed.</b></h4>
 <p><img src="Img/11.png" alt="11" /></p>
 <h4><b>8.After waiting for 10 Minutes click on the Name under "Deployment" Tab to open your Index as shown in the Image.</b></h4>
@@ -133,24 +133,24 @@
 <!---Adding Custom Domain---></p>
 <h2><b>🖍️ Adding Custom Domain</b></h2>
 <h3><b><i>On Railway App:</i></b></h3>
-<p><b>As I already said! That you can add custom domain to your Index,much more easily on Railway and it does not requires adding any special information or verification like adding Card or Phone Number if you deploy it on Railway app. Just click on the "Domain" tab to get all settings about it, as shown in the given Image.</b></p>
+<h4><b>As I already said! That you can add custom domain to your Index,much more easily on Railway and it does not requires adding any special information or verification like adding Card or Phone Number if you deploy it on Railway app. Just click on the "Domain" tab to get all settings about it, as shown in the given Image.</b></h4>
 <p><img src="Img/13.png" alt="13" /></p>
-<p><b>The Railway will ask you to just set a new CNAME Record in your Domain by going into the Domain Registrar's Website<br />Record Details:<br />Name:@ TYPE:CNAME Value/Target: Should be the subdomain of Railway for your Project</b></p>
+<h4><b>The Railway will ask you to just set a new CNAME Record in your Domain by going into the Domain Registrar's Website<br />Record Details:<br />Name:@ TYPE:CNAME Value/Target: Should be the subdomain of Railway for your Project</b></h4>
 <h3><b><i>On Heroku:</i></b></h3>
-<p><b>You can also add custom domain for the Index deployed on Heroku! For it just add Credit Card in your Account by going into:<br />Account Settings&gt;Billings&gt;Add Credit Card<br />And then you can add Custom domain by going back into<br />App&gt;Settings&gt;Add Domain.</b></p>
-<p><b>Tip: If we look on both Options,then adding custom domain using Railway is much easier than Heroku.</b></p>
+<h4><b>You can also add custom domain for the Index deployed on Heroku! For it just add Credit Card in your Account by going into:<br />Account Settings&gt;Billings&gt;Add Credit Card<br />And then you can add Custom domain by going back into<br />App&gt;Settings&gt;Add Domain.</b></h4>
+<h4><b>Tip: If we look on both Options,then adding custom domain using Railway is much easier than Heroku.</b></h4>
 <h2><b>🔗 Using Direct Link!</b></h2>
-<p><b>This Project provides you permanent direct download link of any file (In any Cloud) to use it in any Internet Download Manager (IDM) or in large number of CLI(s).To Copy the Direct Download link! Follow the below steps:</b></p>
+<h4><b>This Project provides you permanent direct download link of any file (In any Cloud) to use it in any Internet Download Manager (IDM) or in large number of CLI(s).To Copy the Direct Download link! Follow the below steps:</b></h4>
 <h3><b><i>On Mobile:</i></b></h3>
-<p><b>1.Just Hold down on a file name in your Index and click "Copy link address" in pop-up.</b></p>
+<h4><b>1.Just Hold down on a file name in your Index and click "Copy link address" in pop-up.</b></h4>
 <p><img src="Img/14.jpg" height="50%" width="40%" align="center" alt="14/Mobile-Preview" /></p>
-<p><b>2.And you have successfully Copied your Direct Download Link.</b></p>
+<h4><b>2.And you have successfully Copied your Direct Download Link.</b></h4>
 <h3><b><i>On PC:</i></b></h3>
-<p><b>1.Just right click on the File Name and click "Copy Link".</b></p>
+<h4><b>1.Just right click on the File Name and click "Copy Link".</b></h4>
 <p><img src="Img/15.png" alt="15/PC-Preview" />
 <!---Streaming Videos---></p>
 <h2><b>📽️ Streaming Videos</b></h2>
-<p><b>You can use VLC Media App for both Phone/PC/Laptop and Tablet.Lets learn how to do that!</b></p>
+<h4><b>You can use VLC Media App for both Phone/PC/Laptop and Tablet.Lets learn how to do that!</b></h4>
 <h3><b><i>For Mobile Phone:</i></b></h3>
 <h4><b>1.First Download VLC Media App for <a href="https://play.google.com/store/apps/details?id=org.videolan.vlc" alt="VLC For Android">Android</a> or <a href="https://apps.apple.com/us/app/vlc-for-mobile/id650377962" alt="VLC For iOS">iOS</a>.</b></h4>
 <h4><b>2.Now open it and click "More" option then "New Stream" option as shown in the given image.</b></h4>
