--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 <h3><b><i>On Railway App:</i></b></h3>
 <h4><b>As I already said! That you can add custom domain to your Index,much more easily on Railway and it does not requires adding any special information or verification like adding Card or Phone Number if you deploy it on Railway app. Just click on the "Domain" tab to get all settings about it, as shown in the given Image.</b></h4>
 <p><img src="Img/13.png" alt="13" /></p>
-<h4><b>The Railway will ask you to just set a new CNAME Record in your Domain by going into the Domain Registrar's Website<br />Record Details:<br />Name:@ TYPE:CNAME Value/Target: Should be the subdomain of Railway for your Project</b></h4>
+<h4><b>The Railway will ask you to just set a new CNAME Record in your Domain by going into the Domain Registrar's Website<br />Record Details:<br />Name: @ <br />TYPE: CNAME <br />Value/Target: Should be the subdomain of Railway for your Project</b></h4>
 <h3><b><i>On Heroku:</i></b></h3>
 <h4><b>You can also add custom domain for the Index deployed on Heroku! For it just add Credit Card in your Account by going into:<br />Account Settings&gt;Billings&gt;Add Credit Card<br />And then you can add Custom domain by going back into<br />App&gt;Settings&gt;Add Domain.</b></h4>
 <h4><b>Tip: If we look on both Options,then adding custom domain using Railway is much easier than Heroku.</b></h4>
